# SAAS

./: .gitignore  .replit  DEPLOYMENT_CHECKLIST.md  README.md  SETUP_GUIDE.md  SRS_SAAS.docx  SYSTEM_SRS.md  SYSTEM_USAGE.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  cnps_sample.db  docker-compose.yml  generate_cnps_db.py  pyproject.toml  replit.md  start_backend.bat
.github/workflows/: ci.yml
.local/secondary_skills/ad-creative/: .fingerprint
.local/secondary_skills/ai-recruiter/: .fingerprint
attached_assets/: Pasted-go-through-the-saas-folder-codebase-debug-it-adn-correc_1777469782403.txt  Pasted-what-would-a-company-like-CNPS-Cameroon-need-an-analysi_1777469438021.txt
backend/: .env.example  Dockerfile  requirements.txt  supabase_schema.sql
backend/api/: main.py
backend/migrations/: 001_governed_mesh.sql  002_seed_test_data.sql  003_forecasts_audit.sql  004_insight_snapshots.sql  005_remove_legacy_demo_data.sql  006_fix_database_connections.sql  007_empty_kpi_template.sql  008_remove_legacy_seed_kpis.sql
docs/: APP_CLASS_DIAGRAM.md  ARCHITECTURE_UML.md  CNPS_TESTING_GUIDE.md  CNPS_TESTING_GUIDE_MYSQL.md  CNPS_TESTING_GUIDE_POSTGRESQL.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  FUTURE.md  PROJECT_GUIDE.md  PROJECT_REPORT_COMPLETE.md  SETUP_GUIDE.md  SYSTEM_SRS.md  SYSTEM_USAGE.md  TESTING_GUIDE.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.webmanifest
frontend/src/: App.jsx  index.css  main.jsx
tests/: test_chart_service.py  test_connection_utils.py  test_core_pipeline.py
(+147 files in other folders)
