[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler==3.10.4",
    "cryptography>=47.0.0",
    "fastapi==0.109.2",
    "groq==0.4.2",
    "httpx>=0.24,<1.0",
    "pandas==2.2.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.6.1",
    "pymongo==4.6.1",
    "pymysql>=1.1.2",
    "python-dotenv==1.0.1",
    "scikit-learn==1.4.0",
    "sib-api-v3-sdk==7.6.0",
    "sqlalchemy==2.0.25",
    "supabase==2.3.4",
    "uvicorn==0.27.1",
]
